--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -106,7 +106,15 @@
     <None Include="Assets\sphere.model" />
     <None Include="Assets\suzanne.model" />
     <None Include="Assets\torus.model" />
+    <None Include="Shaders\fullbright.frag" />
+    <None Include="Shaders\fullbright.vert" />
     <None Include="Shaders\geometry.frag" />
+    <None Include="Shaders\geometry.geom" />
+    <None Include="Shaders\geometry.vert" />
+    <None Include="Shaders\standard.frag" />
+    <None Include="Shaders\standard.vert" />
+    <None Include="Shaders\text.frag" />
+    <None Include="Shaders\text.vert" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
