Working 2D Geometry Shader

--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -113,6 +113,8 @@
     <None Include="Shaders\geometry.vert" />
     <None Include="Shaders\standard.frag" />
     <None Include="Shaders\standard.vert" />
+    <None Include="Shaders\terrain.frag" />
+    <None Include="Shaders\terrain.vert" />
     <None Include="Shaders\text.frag" />
     <None Include="Shaders\text.vert" />
   </ItemGroup>
