Start of Grid Generation

--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -108,12 +108,10 @@
     <None Include="Assets\torus.model" />
     <None Include="Shaders\fullbright.frag" />
     <None Include="Shaders\fullbright.vert" />
-    <None Include="Shaders\geometry.frag" />
-    <None Include="Shaders\geometry.geom" />
-    <None Include="Shaders\geometry.vert" />
     <None Include="Shaders\standard.frag" />
     <None Include="Shaders\standard.vert" />
     <None Include="Shaders\terrain.frag" />
+    <None Include="Shaders\terrain.geom" />
     <None Include="Shaders\terrain.vert" />
     <None Include="Shaders\text.frag" />
     <None Include="Shaders\text.vert" />
