--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -85,20 +85,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="common\controls.cpp" />
-    <ClCompile Include="common\loadShader.cpp" />
-    <ClCompile Include="common\mesh.cpp" />
-    <ClCompile Include="Common\meshInstance.cpp" />
-    <ClCompile Include="common\text2D.cpp" />
-    <ClCompile Include="common\textureLoad.cpp" />
+    <ClCompile Include="Common\Graphics\GridMesh.cpp" />
+    <ClCompile Include="Common\Util\loadShader.cpp" />
+    <ClCompile Include="Common\Graphics\mesh.cpp" />
+    <ClCompile Include="Common\Graphics\meshInstance.cpp" />
+    <ClCompile Include="Common\Util\text2D.cpp" />
+    <ClCompile Include="Common\Util\textureLoad.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="common\controls.hpp" />
-    <ClInclude Include="common\mesh.hpp" />
-    <ClInclude Include="Common\meshInstance.hpp" />
-    <ClInclude Include="common\text2D.hpp" />
-    <ClInclude Include="common\textureLoad.hpp" />
-    <ClInclude Include="common\loadShader.hpp" />
+    <ClInclude Include="common\controls.h" />
+    <ClInclude Include="Common\Graphics\GridMesh.h" />
+    <ClInclude Include="Common\Graphics\mesh.h" />
+    <ClInclude Include="Common\Graphics\meshInstance.h" />
+    <ClInclude Include="Common\Util\text2D.h" />
+    <ClInclude Include="Common\Util\textureLoad.h" />
+    <ClInclude Include="Common\Util\loadShader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\cube.model" />
@@ -106,6 +108,7 @@
     <None Include="Assets\sphere.model" />
     <None Include="Assets\suzanne.model" />
     <None Include="Assets\torus.model" />
+    <None Include="ClassDiagram.cd" />
     <None Include="Shaders\fullbright.frag" />
     <None Include="Shaders\fullbright.vert" />
     <None Include="Shaders\standard.frag" />
