Texture pixel manipulation tests

--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -131,6 +131,7 @@
     <Image Include="Assets\GridTexture.dds">
       <DeploymentContent>true</DeploymentContent>
     </Image>
+    <None Include="Assets\pixelReadTest.dds" />
     <Image Include="Assets\skySphere.dds">
       <DeploymentContent>true</DeploymentContent>
     </Image>
