--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\OpenGL\assimp\include;C:\OpenGL\glm;C:\OpenGL\SOIL\src;C:\OpenGL\glew\include;C:\OpenGL\glfw\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenGL\assimp\lib;C:\OpenGL\SOIL\lib;C:\OpenGL\glew\lib\;C:\OpenGL\glfw\lib-msvc120;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\OpenGL\libnoise\include;C:\OpenGL\assimp\include;C:\OpenGL\glm;C:\OpenGL\SOIL\src;C:\OpenGL\glew\include;C:\OpenGL\glfw\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\OpenGL\libnoise\bin;C:\OpenGL\assimp\lib;C:\OpenGL\SOIL\lib;C:\OpenGL\glew\lib\;C:\OpenGL\glfw\lib-msvc120;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -60,8 +60,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\OpenGL\assimp\lib;C:\OpenGL\assimp\lib32;C:\OpenGL\SOIL\lib;C:\OpenGL\glfw\lib-msvc120;C:\OpenGL\glew\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>assimp.lib;opengl32.lib;glfw3.lib;glu32.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\OpenGL\libnoise\bin;C:\OpenGL\assimp\lib;C:\OpenGL\assimp\lib32;C:\OpenGL\SOIL\lib;C:\OpenGL\glfw\lib-msvc120;C:\OpenGL\glew\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libnoise.lib;assimp.lib;opengl32.lib;glfw3.lib;glu32.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImportLibrary>C:\OpenGL\assimp\lib\assimpd.dll</ImportLibrary>
     </Link>
   </ItemDefinitionGroup>
@@ -89,6 +89,7 @@
     <ClCompile Include="Common\Util\loadShader.cpp" />
     <ClCompile Include="Common\Graphics\mesh.cpp" />
     <ClCompile Include="Common\Graphics\meshInstance.cpp" />
+    <ClCompile Include="Common\Util\noiseutils.cpp" />
     <ClCompile Include="Common\Util\text2D.cpp" />
     <ClCompile Include="Common\Util\textureLoad.cpp" />
     <ClCompile Include="main.cpp" />
@@ -98,6 +99,7 @@
     <ClInclude Include="Common\Graphics\GridMesh.h" />
     <ClInclude Include="Common\Graphics\mesh.h" />
     <ClInclude Include="Common\Graphics\meshInstance.h" />
+    <ClInclude Include="Common\Util\noiseutils.h" />
     <ClInclude Include="Common\Util\text2D.h" />
     <ClInclude Include="Common\Util\textureLoad.h" />
     <ClInclude Include="Common\Util\loadShader.h" />
