--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -131,6 +131,7 @@
     <Image Include="Assets\DroidSansMono.dds">
       <DeploymentContent>true</DeploymentContent>
     </Image>
+    <Image Include="Assets\grass.dds" />
     <Image Include="Assets\GridTexture.dds">
       <DeploymentContent>true</DeploymentContent>
     </Image>
