--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\OpenGL\libnoise\include;C:\OpenGL\assimp\include;C:\OpenGL\glm;C:\OpenGL\SOIL\src;C:\OpenGL\glew\include;C:\OpenGL\glfw\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenGL\libnoise\bin;C:\OpenGL\assimp\lib;C:\OpenGL\SOIL\lib;C:\OpenGL\glew\lib\;C:\OpenGL\glfw\lib-msvc120;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Marcos\Documents\GitHub\Realtime-Rendering\Realtime Rendering\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Marcos\Documents\GitHub\Realtime-Rendering\Realtime Rendering\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -55,13 +55,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\OpenGL\assimp\include;C:\OpenGL\glew\include;C:\OpenGL\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\OpenGL\libnoise\bin;C:\OpenGL\assimp\lib;C:\OpenGL\assimp\lib32;C:\OpenGL\SOIL\lib;C:\OpenGL\glfw\lib-msvc120;C:\OpenGL\glew\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libnoise.lib;assimp.lib;opengl32.lib;glfw3.lib;glu32.lib;glew32s.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libnoise.lib;assimp.lib;opengl32.lib;glfw3.lib;glu32.lib;glew32s.lib;SOIL.lib;BulletDynamics.lib;BulletCollision.lib;LinearMath.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImportLibrary>C:\OpenGL\assimp\lib\assimpd.dll</ImportLibrary>
     </Link>
   </ItemDefinitionGroup>
@@ -114,6 +114,7 @@
     <None Include="Assets\suzanne.model" />
     <None Include="Assets\torus.model" />
     <None Include="ClassDiagram.cd" />
+    <None Include="Libraries.zip" />
     <None Include="Shaders\fullbright.frag" />
     <None Include="Shaders\fullbright.vert" />
     <None Include="Shaders\standard.frag" />
