--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -85,6 +85,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="common\controls.cpp" />
+    <ClCompile Include="Common\EngineObjects\Components\RenderComponent.cpp" />
     <ClCompile Include="Common\Graphics\GridMesh.cpp" />
     <ClCompile Include="Common\Util\DebugDisplay.cpp" />
     <ClCompile Include="Common\Util\loadShader.cpp" />
@@ -97,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common\controls.h" />
+    <ClInclude Include="Common\EngineObjects\Components\BaseComponent.h" />
+    <ClInclude Include="Common\EngineObjects\Components\RenderComponent.h" />
+    <ClInclude Include="Common\EngineObjects\GameObject.h" />
     <ClInclude Include="Common\Graphics\GridMesh.h" />
     <ClInclude Include="Common\Graphics\mesh.h" />
     <ClInclude Include="Common\Graphics\meshInstance.h" />
