--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="Common\EngineObjects\Components\RenderComponent.cpp" />
     <ClCompile Include="Common\EngineObjects\Components\TransformComponent.cpp" />
     <ClCompile Include="Common\EngineObjects\GameEntity.cpp" />
+    <ClCompile Include="Common\Graphics\bulletDebugDraw.cpp" />
     <ClCompile Include="Common\Graphics\GridMesh.cpp" />
     <ClCompile Include="Common\Util\DebugDisplay.cpp" />
     <ClCompile Include="Common\Util\loadShader.cpp" />
@@ -104,6 +105,7 @@
     <ClInclude Include="Common\EngineObjects\Components\TransformComponent.h" />
     <ClInclude Include="Common\EngineObjects\Components\RenderComponent.h" />
     <ClInclude Include="Common\EngineObjects\GameEntity.h" />
+    <ClInclude Include="Common\Graphics\bulletDebugDraw.h" />
     <ClInclude Include="Common\Graphics\GridMesh.h" />
     <ClInclude Include="Common\Graphics\mesh.h" />
     <ClInclude Include="Common\Util\DebugDisplay.h" />
@@ -121,6 +123,8 @@
     <None Include="Assets\suzanne.model" />
     <None Include="Assets\torus.model" />
     <None Include="ClassDiagram.cd" />
+    <None Include="Shaders\debugLine.frag" />
+    <None Include="Shaders\debugLine.vert" />
     <None Include="Shaders\fullbright.frag" />
     <None Include="Shaders\fullbright.vert" />
     <None Include="Shaders\standard.frag" />
