--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -85,9 +85,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="common\controls.cpp" />
+    <ClCompile Include="Common\EngineObjects\Components\CameraComponent.cpp" />
     <ClCompile Include="Common\EngineObjects\Components\RenderComponent.cpp" />
     <ClCompile Include="Common\EngineObjects\Components\TransformComponent.cpp" />
-    <ClCompile Include="Common\EngineObjects\GameEntity.cpp" />
+    <ClCompile Include="Common\EngineObjects\Entities\BaseEntity.cpp" />
     <ClCompile Include="Common\Graphics\bulletDebugDraw.cpp" />
     <ClCompile Include="Common\Graphics\GridMesh.cpp" />
     <ClCompile Include="Common\Util\DebugDisplay.cpp" />
@@ -103,9 +104,11 @@
   <ItemGroup>
     <ClInclude Include="common\controls.h" />
     <ClInclude Include="Common\EngineObjects\Components\BaseComponent.h" />
+    <ClInclude Include="Common\EngineObjects\Components\CameraComponent.h" />
     <ClInclude Include="Common\EngineObjects\Components\TransformComponent.h" />
     <ClInclude Include="Common\EngineObjects\Components\RenderComponent.h" />
-    <ClInclude Include="Common\EngineObjects\GameEntity.h" />
+    <ClInclude Include="Common\EngineObjects\Entities\BaseEntity.h" />
+    <ClInclude Include="Common\EngineObjects\Entities\FreeCamera.h" />
     <ClInclude Include="Common\Graphics\bulletDebugDraw.h" />
     <ClInclude Include="Common\Graphics\GridMesh.h" />
     <ClInclude Include="Common\Graphics\mesh.h" />
