Reverted back to raw pointers, object deletion (kinda), a solid get component func

--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -123,7 +123,7 @@
     <ClInclude Include="Engine\Components\TransformComponent.h" />
     <ClInclude Include="Engine\Components\RenderComponent.h" />
     <ClInclude Include="Engine\Entities\BaseEntity.h" />
-    <ClInclude Include="Engine\Entities\FreeCamera.h" />
+    <ClInclude Include="Engine\Entities\FreeCameraInput.h" />
     <ClInclude Include="Engine\Graphics\bulletDebugDraw.h" />
     <ClInclude Include="Engine\Graphics\GridMesh.h" />
     <ClInclude Include="Engine\Graphics\mesh.h" />
