--- a/Realtime Rendering/Realtime Rendering.vcxproj
+++ b/Realtime Rendering/Realtime Rendering.vcxproj
@@ -88,6 +88,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Engine\AssetManager.cpp" />
+    <ClCompile Include="Engine\Graphics\framebuffer.cpp" />
     <ClCompile Include="Engine\GUI\Console.cpp" />
     <ClCompile Include="Engine\GUIManager.cpp" />
     <ClCompile Include="Engine\InputManager.cpp" />
@@ -113,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\AssetManager.h" />
+    <ClInclude Include="Engine\Graphics\framebuffer.h" />
     <ClInclude Include="Engine\GUI\Console.h" />
     <ClInclude Include="Engine\GUIManager.h" />
     <ClInclude Include="Engine\Scene.h" />
@@ -138,6 +140,8 @@
     <ClInclude Include="Engine\GUI\GUIBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\OpenGLTutorials\OpenGL-tutorial_v0014_33\tutorial14_render_to_texture\Passthrough.vertexshader" />
+    <None Include="..\..\OpenGLTutorials\OpenGL-tutorial_v0014_33\tutorial14_render_to_texture\WobblyTexture.fragmentshader" />
     <None Include="Assets\cube.model" />
     <None Include="Assets\cylinder.model" />
     <None Include="Assets\dummyTerrain.model" />
@@ -151,12 +155,15 @@
     <None Include="Engine\Shaders\fullbright.vert" />
     <None Include="Engine\Shaders\gradient.frag" />
     <None Include="Engine\Shaders\gradient.vert" />
+    <None Include="Engine\Shaders\framebuffer.vert" />
     <None Include="Engine\Shaders\standard.frag" />
     <None Include="Engine\Shaders\standard.vert" />
     <None Include="Engine\Shaders\text.frag" />
     <None Include="Engine\Shaders\text.vert" />
+    <None Include="Engine\Shaders\framebuffer.frag" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\OpenGLTutorials\OpenGL-tutorial_v0014_33\tutorial14_render_to_texture\uvmap.DDS" />
     <Image Include="Assets\CloudTexture.dds">
       <DeploymentContent>true</DeploymentContent>
     </Image>
